admin/assets/stylesheets/elements/_gds-sticky-confirmation-banner.scss
.govuk-sticky-banner-wrapper {
  background-color: rgba(217, 236, 226, 1);
  display: none;
  margin: 0;
  padding: 0;
  text-align: right;
  width: 100%;
  z-index: 999;
  position: sticky;
  position: -webkit-sticky;
  bottom: 0;
  left: 0;

  &.show {
    display: block;
  }

  &.fixed {
    position: fixed;
    bottom: 0;
  }

  #content {
    padding: 0;

    .govuk-grid-row {
      display: flex;
      align-items: center;
    }
  }

  .first-half {
    font-size: 16px;
  }

  .govuk-grid-row {
    margin: 0 -7px;
  }

  .first-half {
    text-align: left;
  }

  .govuk-button--secondary {
    margin-left: govuk-em(15px, $govuk-root-font-size);
  }

  @include media(mobile) {
    overflow: hidden;
    padding: 0 0 15px 0;

    .govuk-grid-row {
      margin: 0 -5px;
    }

    .govuk-button {
      float: right;
      width: 49%;
    }

    .govuk-button--secondary:not(:last-child) {
      margin-right: 0;
    }

    .govuk-button--secondary {
      float: left;
      margin-top: 0;
      padding-left: 0;
      padding-right: 0;
      text-align: center;
      width: 49%;
    }
  }

  div {
    padding: 5px;
  }
}

@include media(mobile) {
  .sticky-banner-wrapper {
    padding-bottom: 5px;
  }
}

.sticky-banner {
  position: fixed;
  left: 0;
  top: 0;
}

#totalPupilsSelected {
  font-weight: bold;
}

